--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHeight_percent="0.78"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- Using 2 imageViews to show animations -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.22"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <ImageView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:animation="@{!vm.animation}"
+                android:onClick="@{()->vm.setting()}"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_round_settings_48"
+                android:contentDescription="@string/setting">
+            </ImageView>
+            <ImageView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:animation="@{vm.animation}"
+                android:onClick="@{()->vm.setting()}"
+                android:visibility="invisible"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_round_clear_48"
+                android:contentDescription="@string/clear">
+            </ImageView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
