--- a/app/app/src/main/res/values/themes.xml
+++ b/app/app/src/main/res/values/themes.xml
@@ -33,4 +33,11 @@
         <item name="android:textColorHint">@color/hint</item>
         <item name="colorControlNormal">@color/shadow</item>
     </style>
+    <style name="SettingTitleTextView" parent="Font_Thin">
+        <item name="android:theme">@style/SettingTitleTextView</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/title</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+    </style>
 </resources>
