Add setting function

--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:animation="@{!vm.animation}"
-                android:onClick="@{()->vm.setting()}"
+                android:onClick="@{()->vm.button()}"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_round_settings_48"
@@ -60,7 +60,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:animation="@{vm.animation}"
-                android:onClick="@{()->vm.setting()}"
+                android:onClick="@{()->vm.button()}"
                 android:visibility="invisible"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
