--- a/app/app/src/main/res/layout/fragment_setting.xml
+++ b/app/app/src/main/res/layout/fragment_setting.xml
@@ -12,32 +12,94 @@
         android:layout_height="match_parent"
         android:paddingStart="50dp"
         android:paddingEnd="50dp">
-        <TextView
-            android:text="@string/account"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/logout"
-            style="@style/SettingTitleTextView"/>
+        <!-- call -->
         <LinearLayout
-            android:id="@+id/logout"
+            android:id="@+id/call"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="@{()->vm.logout()}"
-            android:background="@drawable/blue_rect_round"
+            android:layout_marginBottom="60dp"
+            app:layout_constraintBottom_toTopOf="@+id/door">
+            <TextView
+                android:text="@string/call"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/SettingTitleTextView"/>
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:text="@string/sw_voice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="@={vm.setting[0]}"
+                android:onClick="@{()->vm.setting()}"
+                style="@style/SettingTextView"/>
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:text="@string/sw_popup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="@={vm.setting[1]}"
+                android:onClick="@{()->vm.setting()}"
+                style="@style/SettingTextView"/>
+        </LinearLayout>
+
+        <!-- door -->
+        <LinearLayout
+            android:id="@+id/door"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="60dp"
+            app:layout_constraintBottom_toTopOf="@+id/account">
+            <TextView
+                android:text="@string/door"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/SettingTitleTextView"/>
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:text="@string/sw_door"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="@={vm.setting[2]}"
+                android:onClick="@{()->vm.setting()}"
+                style="@style/SettingTextView"/>
+            <TextView
+                android:text="@string/warning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/SettingWarning"/>
+        </LinearLayout>
+
+        <!-- account -->
+        <LinearLayout
+            android:id="@+id/account"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent">
             <TextView
-                android:text="@string/logout"
-                android:textSize="@dimen/normal"
-                android:textColor="@android:color/white"
-                android:gravity="center"
+                android:text="@string/account"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                style="@style/Font_Regular"/>
+                android:layout_height="wrap_content"
+                style="@style/SettingTitleTextView"/>
+            <LinearLayout
+                android:id="@+id/logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="@{()->vm.logout()}"
+                android:background="@drawable/blue_rect_round">
+                <TextView
+                    android:text="@string/logout"
+                    android:textSize="@dimen/normal"
+                    android:textColor="@android:color/white"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    style="@style/Font_Regular"/>
+            </LinearLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
