Add fcm and foreground service

--- a/app/app/src/main/res/layout/fragment_main.xml
+++ b/app/app/src/main/res/layout/fragment_main.xml
@@ -16,6 +16,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:clickable="true"
             android:focusable="true"
+            android:onClick="@{()->vm.service()}"
             android:background="@drawable/circle_blue"
             android:layout_width="210dp"
             android:layout_height="210dp">
