--- a/app/app/src/main/res/layout/activity_login.xml
+++ b/app/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,18 @@
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         tools:context=".LoginActivity">
+        <ImageView
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintWidth_percent="0.9"
+            app:gif="@{true}"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="150dp"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"/>
         <EditText
             android:id="@+id/email"
             android:hint="@string/email"
